[package]
name = "rustop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.4"
axum = { version = "0.6.9", features = ["macros", "tokio", "ws"] }
futures = "0.3.26"
serde_json = "1.0.93"
sysinfo = "0.28.1"
tokio = { version = "1.26.0", features = ["full"] }
